--- a/Notebooks/Clusters annotation.ipynb
+++ b/Notebooks/Clusters annotation.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_FOLDER = \"\"\n",
+    "DATA_FOLDER = \"../Data/\"\n",
     "\n",
     "CLUSTERS_GAPS_FILE = DATA_FOLDER+\"refseq.fasta\" # Clusters reference sequences (fasta file)\n",
     "CLUSTERS_FILE= DATA_FOLDER+\"clusters.faa\" #  Clusters reference sequences without gaps (fasta file)\n",
