Add single mutant to DCA

--- a/Notebooks/Context dependence.ipynb
+++ b/Notebooks/Context dependence.ipynb
@@ -137,13 +137,18 @@
     "        e = -0.5*np.matmul(v.transpose(),np.matmul(self.J,v))-np.matmul(v.transpose(),self.h) #VERIFIER le < ou != auprès de Giancarlo, facteur 0.5\n",
     "        return float(np.exp(e))#VERIFIER SI C'EST BIEN TOUJOURS l'EXPONENTIELLE QUE L'ON VEUT\n",
     "    \n",
-    "    def ∆H(self,sequence):\n",
+    "    def ∆H_sequence(self,sequence):\n",
     "        return self.H(sequence)-self.H_ref\n",
     "    \n",
-    "    def single_mutant(self,locus,residue):\n",
+    "    def mutant(self,loci,residues):\n",
     "        sequence = self.reference.copy()\n",
-    "        sequence[locus] = residue\n",
+    "        for i in range(len(loci)):\n",
+    "            sequence[loci[i]] = residues[i]\n",
     "        return sequence\n",
+    "    \n",
+    "    def ∆H_mutant(self,loci,residues):\n",
+    "        sequence = self.single_mutant(loci,residues)\n",
+    "        return self.H(sequence)-self.H_ref\n",
     "            \n",
     "    def compute_CD_entropy(self):\n",
     "        entropies = []\n",
