Correct bad algnt definition

--- a/Notebooks/Clusters annotation.ipynb
+++ b/Notebooks/Clusters annotation.ipynb
@@ -79,8 +79,8 @@
     "SIMILARITY_THRESHOLD = 0.9\n",
     "\n",
     "# Good alignment criteria: no more than max(MAX_GAPS_PROP*total number of characters,MAX_GAPS_ABS) gaps.\n",
-    "MAX_GAPS_ABS = 3\n",
-    "MAX_GAPS_PROP = 1/300 "
+    "MAX_GAPS_ABS = 5\n",
+    "MAX_GAPS_PROP = 1/180 "
    ]
   },
   {
@@ -133,7 +133,8 @@
    "outputs": [],
    "source": [
     "SINGLETONS_FASTA = SeqIO.to_dict(SeqIO.parse(SINGLETONS_FILE, \"fasta\"))    \n",
-    "CLUSTERS_FASTA = SeqIO.to_dict(SeqIO.parse(CLUSTERS_FILE, \"fasta\"))   \n",
+    "CLUSTERS_FASTA = SeqIO.to_dict(SeqIO.parse(CLUSTERS_FILE, \"fasta\"))\n",
+    "CLUSTERS_GAPS_FASTA = SeqIO.to_dict(SeqIO.parse(CLUSTERS_GAPS_FILE, \"fasta\"))\n",
     "SEQUENCES_FASTA = dict(SINGLETONS_FASTA, **CLUSTERS_FASTA)\n",
     "K12_FASTA = SeqIO.to_dict(SeqIO.parse(K12_FILE, \"fasta\"))"
    ]
@@ -804,16 +805,16 @@
     "        gene_length.append(str(hits[0].get_gene_length()))\n",
     "        fragment.append(str(hits[0].is_fragment()))\n",
     "        singleton.append(\"False\")\n",
-    "        sequence = [int(i==\"-\") for i in str(CLUSTERS_FASTA[hits[0].cluster_name].seq)]\n",
+    "        sequence = [int(i==\"-\") for i in str(CLUSTERS_GAPS_FASTA[hits[0].cluster_name].seq)]\n",
     "        a = sequence+[0]\n",
     "        b = [0]+sequence\n",
     "        c = [int((a[i]-b[i])==1) for i in range(len(a))]\n",
     "        gaps_count = np.sum(np.array(c))\n",
-    "        characters = len(sequence)-np.sum(np.array(sequence))\n",
-    "        if(gaps_count>max(MAX_GAPS_PROP*characters,MAX_GAPS_ABS)):\n",
+    "        dashes_count = np.sum(np.array(sequence))\n",
+    "        if(gaps_count>max(MAX_GAPS_PROP*len(sequence),MAX_GAPS_ABS) and dashes_count>0.1*len(sequence)):\n",
     "            bad_algnt.append(\"True\")\n",
     "            gaps.append(str(gaps_count))\n",
-    "            dashes.append(str(np.sum(np.array(sequence))))\n",
+    "            dashes.append(str(dashes_count))\n",
     "        else:\n",
     "            bad_algnt.append(\"False\")\n",
     "            gaps.append(\"\")\n",
