--- a/Notebooks/HPI.ipynb
+++ b/Notebooks/HPI.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,18 +85,19 @@
     "SIMILARITY_THRESHOLD = 0.9\n",
     "\n",
     "# Good alignment criteria: no more than max(MAX_GAPS_PROP*total number of characters,MAX_GAPS_ABS) gaps.\n",
-    "MAX_GAPS_ABS = 3\n",
-    "MAX_GAPS_PROP = 1/300 "
+    "MAX_GAPS_ABS = 5\n",
+    "MAX_GAPS_PROP = 1/180 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "SINGLETONS_FASTA = SeqIO.to_dict(SeqIO.parse(SINGLETONS_FILE, \"fasta\"))    \n",
     "CLUSTERS_FASTA = SeqIO.to_dict(SeqIO.parse(CLUSTERS_FILE, \"fasta\"))   \n",
+    "CLUSTERS_GAPS_FASTA = SeqIO.to_dict(SeqIO.parse(CLUSTERS_GAPS_FILE, \"fasta\"))\n",
     "SEQUENCES_FASTA = dict(SINGLETONS_FASTA, **CLUSTERS_FASTA)\n",
     "HPI_FASTA = SeqIO.to_dict(SeqIO.parse(HPI_FILE, \"fasta\"))"
    ]
@@ -112,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +404,7 @@
     "            line = hits[i].cluster_name[7:]+\",\"\n",
     "            line += str(hits[i].get_cluster_length())+\",\"\n",
     "            line += hits[i].get_gene_name()+\",\"\n",
-    "            line += K12_FASTA[hits[i].gene_name].description+\",\"\n",
+    "            line += HPI_FASTA[hits[i].gene_name].description+\",\"\n",
     "            line += str(hits[i].get_gene_length())+\",\"\n",
     "            line += str(hits[i].global_similarity)+\",\"\n",
     "            line += str(hits[i].is_fragment())+\",\"\n",
@@ -425,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,9 +508,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'len_seq' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-15-2eb843ee8a3c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     34\u001b[0m         \u001b[0mgaps_count\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m         \u001b[0mdashes_count\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msequence\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 36\u001b[0;31m         \u001b[0;32mif\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgaps_count\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mMAX_GAPS_PROP\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msequence\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mMAX_GAPS_ABS\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mdashes_count\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0;36m0.1\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mlen_seq\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     37\u001b[0m             \u001b[0mbad_algnt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"True\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m             \u001b[0mgaps\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgaps_count\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'len_seq' is not defined"
+     ]
+    }
+   ],
    "source": [
     "gene_id = []\n",
     "cluster_id = []\n",
@@ -540,16 +553,16 @@
     "        gene_length.append(str(hits[0].get_gene_length()))\n",
     "        fragment.append(str(hits[0].is_fragment()))\n",
     "        singleton.append(\"False\")\n",
-    "        sequence = [int(i==\"-\") for i in str(CLUSTERS_FASTA[hits[0].cluster_name].seq)]\n",
+    "        sequence = [int(i==\"-\") for i in str(CLUSTERS_GAPS_FASTA[hits[0].cluster_name].seq)]\n",
     "        a = sequence+[0]\n",
     "        b = [0]+sequence\n",
     "        c = [int((a[i]-b[i])==1) for i in range(len(a))]\n",
     "        gaps_count = np.sum(np.array(c))\n",
-    "        characters = len(sequence)-np.sum(np.array(sequence))\n",
-    "        if(gaps_count>max(MAX_GAPS_PROP*characters,MAX_GAPS_ABS)):\n",
+    "        dashes_count = np.sum(np.array(sequence))\n",
+    "        if(gaps_count>max(MAX_GAPS_PROP*len(sequence),MAX_GAPS_ABS) and dashes_count>0.1*len(sequence)):\n",
     "            bad_algnt.append(\"True\")\n",
     "            gaps.append(str(gaps_count))\n",
-    "            dashes.append(str(np.sum(np.array(sequence))))\n",
+    "            dashes.append(str(dashes_count))\n",
     "        else:\n",
     "            bad_algnt.append(\"False\")\n",
     "            gaps.append(\"\")\n",
