--- a/Notebooks/Explaining DCA.ipynb
+++ b/Notebooks/Explaining DCA.ipynb
@@ -29,20 +29,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "61"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -92,7 +81,10 @@
    "outputs": [],
    "source": [
     "class Mutation:\n",
-    "    self.mutation_type = dict() # A DEFINIR\n",
+    "    self.mutation_type = {(\"A\",\"T\"):\"Transversion\",(\"A\",\"C\"):\"Transversion\",(\"A\",\"G\"):\"Transition\",\n",
+    "                          (\"T\",\"A\"):\"Transversion\",(\"T\",\"G\"):\"Transversion\",(\"T\",\"C\"):\"Transition\",\n",
+    "                          (\"G\",\"T\"):\"Transversion\",(\"G\",\"C\"):\"Transversion\",(\"G\",\"A\"):\"Transition\",\n",
+    "                          (\"C\",\"A\"):\"Transversion\",(\"C\",\"G\"):\"Transversion\",(\"C\",\"T\"):\"Transition\"}\n",
     "    \n",
     "    def __init__(self,gene,locus,mutated_base,DCA):\n",
     "        self.gene = gene\n",
@@ -145,8 +137,26 @@
     "        return self.get_triplet()[2]\n",
     "    \n",
     "    def get_mutation_type(self):\n",
-    "        return self.mutation_type[(self.gene.sequence[self.locus],self.mutated_base)]"
+    "        return self.mutation_type[(self.gene.sequence[self.locus],self.mutated_base)]\n",
+    "    \n",
+    "    "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Questions\n",
+    "\n",
+    "- Est-ce que ça a du sens d'essayer d'expliquer le DCA par des mutations nucléotidiques ?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
