Parse .b6 outputs from vsearch and gather results in csv files

--- a/Notebooks/New clusters annotation.ipynb
+++ b/Notebooks/New clusters annotation.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,9 +115,16 @@
     "    seqid = fragments[\"Sequence id\"][i]\n",
     "    if(seqid in full_sequences[\"Sequence id\"]):\n",
     "        duplicates_Fr[i] = True\n",
-    "fragments[~duplicates_Fr].to_csv(OUTPUT_FOLDER+\"fragments_no_duplicates.csv\")\n",
-    "full_sequences[~duplicates_FS].to_csv(OUTPUT_FOLDER+\"full_sequences_no_duplicates.csv\")"
+    "fragments[~duplicates_Fr].to_csv(OUTPUT_FOLDER+\"fragments_no_duplicates.csv\", sep=\";\", index=False)\n",
+    "full_sequences[~duplicates_FS].to_csv(OUTPUT_FOLDER+\"full_sequences_no_duplicates.csv\", sep=\";\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
